objects/Account.object
<CustomObject>
    <fields>
        <fullName>SBQQ__TaxExempt__c</fullName>
        <description>Selected if this account has active certificates</description>
        <inlineHelpText>Selected if this account has active certificates</inlineHelpText>
        <label>Tax-Exempt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Account_Number__c</fullName>
        <inlineHelpText>This is the account number of the customer with salesforce.com</inlineHelpText>
        <label>SFDC Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIGSTR__R_Score__c</fullName>
        <label>R Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIGSTR__SigstrSync__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SigstrSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SI_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SI Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (SI Primary Contact)</relationshipLabel>
        <relationshipName>PrimarySI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIs_Involved__c</fullName>
        <label>SIs Involved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Engineer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce AE</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Salesforce AE)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_AOV_Account__c</fullName>
        <label>Salesforce AOV Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_AOV__c</fullName>
        <formula>CASE(AOV_Band__c, 
&quot;$25M+&quot;, 25000000,
&quot;$10M-25M&quot;, 17500000,
&quot;$5M-10M&quot;, 7500000,
&quot;$1M-5M&quot;, 2500000,
&quot;$600k-1M&quot;, 800000,
&quot;$200k-600k&quot;, 400000,
0
)</formula>
        <label>Salesforce AOV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesforce_AVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce AVP</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Salesforce AVP)</relationshipLabel>
        <relationshipName>SalesforceAVP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce CSM</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Salesforce CSM)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_ECS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce ECS</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Salesforce ECS)</relationshipLabel>
        <relationshipName>SalesforceECS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_Engaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce Engaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_PA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce PA</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Salesforce PA)</relationshipLabel>
        <relationshipName>SalesforcePA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_Platform_AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Platform AE</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Salesforce Platform AE)</relationshipLabel>
        <relationshipName>Accounts_Salesforce_Platform_AE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_RVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce RVP</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Salesforce RVP)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Qualification</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Solution Alignment</fullName>
                </value>
                <value>
                    <fullName>Solution Validation</fullName>
                </value>
                <value>
                    <fullName>Formal Proposal</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Signed Contract Received</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Fully Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_of_Probability__c</fullName>
        <label>Sum of Probability%</label>
        <summarizedField>Opportunity.Probability</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TAM__c</fullName>
        <label>TAM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_Architect__c</fullName>
        <label>Tech Architect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Country__c</fullName>
        <label>Territory Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <label>Territory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_State__c</fullName>
        <label>Territory State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Account_NPS__c</fullName>
        <description>Account NPS for the latest Onboarding or Relationship questionnaire wave.</description>
        <inlineHelpText>Account NPS for the latest Onboarding or Relationship questionnaire wave.</inlineHelpText>
        <label>TopBox - Account NPS</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Account_TopBox_X_Ray__c</fullName>
        <label>TopBox Account X-Ray</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TopBox CSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSM_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Invitation_Guidelines_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the account met the Invitation Guidelines for the latest Onboarding or Relationship questionnaire wave.</description>
        <inlineHelpText>Checked if the account met the Invitation Guidelines for the latest Onboarding or Relationship questionnaire wave.</inlineHelpText>
        <label>TopBox - Invitation Guidelines Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__NPS_Trend__c</fullName>
        <description>Account NPS Trend (No Trend, Declined, Improved) across all Onboarding and Relationship questionnaire Waves.</description>
        <inlineHelpText>Account NPS Trend (No Trend, Declined, Improved) across all Onboarding and Relationship questionnaire Waves.</inlineHelpText>
        <label>TopBox - NPS Trend</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Response_Guidelines_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the account met the Response Guidelines for the latest Onboarding or Relationship questionnaire wave.</description>
        <inlineHelpText>Checked if the account met the Response Guidelines for the latest Onboarding or Relationship questionnaire wave.</inlineHelpText>
        <label>TopBox - Response Guidelines Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Response_Rate__c</fullName>
        <description>Account Response Rate for the latest Onboarding or Relationship questionnaire wave.</description>
        <inlineHelpText>Account Response Rate for the latest Onboarding or Relationship questionnaire wave.</inlineHelpText>
        <label>TopBox - Account Response Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Test_DateTime__c</fullName>
        <label>Test DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Test_Date__c</fullName>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Test_Tier__c</fullName>
        <label>Test Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TopBoxWG__Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Valued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_ARR__c</fullName>
        <label>TopBox ARR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Account_Age__c</fullName>
        <description>Account Age - number of months since Initial Go-Live Date</description>
        <formula>IF(
				ISBLANK(TopBoxWG__TopBox_Initial_Go_Live_Date__c),
				0,
				IF( 
								CEILING( ((TODAY() - TopBoxWG__TopBox_Initial_Go_Live_Date__c) / 365 * 12) - 1 ) &lt;= 0,
								0,
								CEILING( ((TODAY() - TopBoxWG__TopBox_Initial_Go_Live_Date__c) / 365 * 12) - 1 )
						)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account Age - number of months since Initial Go-Live Date</inlineHelpText>
        <label>TopBox - Account Age (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Account_Health_Risk__c</fullName>
        <formula>IF(
AND(
TopBoxWG__TopBox_Engagement_Rate__c &gt;= 0.50 , 
TopBoxWG__TopBox_Value_Net_Score__c &gt;= 0
),
&quot;Green: Expansion Opportunity&quot;,
IF(
AND(
TopBoxWG__TopBox_Engagement_Rate__c &gt;= 0.50 ,
TopBoxWG__TopBox_Value_Net_Score__c &lt; 0
),
&quot;Yellow: Potential to Churn&quot;,
IF(
AND(
TopBoxWG__TopBox_Engagement_Rate__c &lt; 0.50 ,
TopBoxWG__TopBox_Value_Net_Score__c &gt;= 0
),
&quot;Yellow: Potential to Lose to a Competitor&quot;,
IF(
AND(
TopBoxWG__TopBox_Engagement_Rate__c &lt; 0.50 ,
TopBoxWG__TopBox_Value_Net_Score__c &lt; 0
),
&quot;Red: Potential to Churn Without Notice&quot;,
NULL))))</formula>
        <label>TopBox - Account Health Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Account_Renewal_Date__c</fullName>
        <description>Latest scheduled Account Renewal date - for informational purposes.</description>
        <inlineHelpText>Latest scheduled Account Renewal date - for informational purposes.</inlineHelpText>
        <label>TopBox - Account Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_CSM_Email__c</fullName>
        <formula>TopBoxWG__CSM__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TopBox CSM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_CSM_Name__c</fullName>
        <formula>TopBoxWG__CSM__r.FirstName +&quot; &quot;+ TopBoxWG__CSM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TopBox CSM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Engagement_Rate__c</fullName>
        <description>Engagement Rate = % of Response Guidelines Met is multiplied by the overall Response Rate for the Account</description>
        <inlineHelpText>Engagement Rate = % of Response Guidelines Met is multiplied by the overall Response Rate for the Account</inlineHelpText>
        <label>TopBox - Engagement Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Initial_Go_Live_Date__c</fullName>
        <description>Required field to enable Onboarding or Relationship questionnaire scheduling.
The Onboarding questionnaire will be skipped if the Initial Go-Live Date is populated with a date that is more than 2 months old.</description>
        <inlineHelpText>Required field to enable Onboarding or Relationship questionnaire scheduling.
The Onboarding questionnaire will be skipped if the Initial Go-Live Date is populated with a date that is more than 2 months old.</inlineHelpText>
        <label>TopBox - Initial Go-Live  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Initial_Send_Date__c</fullName>
        <description>Date on which the Initial Relationship questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True).</description>
        <inlineHelpText>Date on which the Initial Relationship questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True).</inlineHelpText>
        <label>TopBox - Initial Relationship Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Invitation_Guidelines_Met_Percent__c</fullName>
        <label>TopBox - Invitation Guidelines Met (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Latest_Wave_End_Date__c</fullName>
        <description>End date of latest Onboarding or Relationship questionnaire wave in which the account was included.</description>
        <inlineHelpText>End date of latest Onboarding or Relationship questionnaire wave in which the account was included.</inlineHelpText>
        <label>TopBox - Latest Wave End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Latest_Wave_Start_Date__c</fullName>
        <label>TopBox - Latest Wave Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Next_Questionnaire_Month__c</fullName>
        <description>Override automatically scheduled Relationship send dates that are still in the future.</description>
        <inlineHelpText>Override automatically scheduled Relationship send dates that are still in the future.</inlineHelpText>
        <label>TopBox - Set Relationship Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Next_Questionnaire_Send_Date__c</fullName>
        <description>Date on which the next questionnaire is scheduled to be sent out to the selected contacts - for informational purposes. Once the upcoming Onboarding/Initial/Renewal Send Date has passed, the field automatically updates to reflect the next send date.</description>
        <formula>IF(
				TopBoxWG__TopBox_Onboarding_Send_Date__c &gt; NOW(),
				TopBoxWG__TopBox_Onboarding_Send_Date__c,
				IF(
				    TopBoxWG__TopBox_Initial_Send_Date__c &gt; NOW(),
								TopBoxWG__TopBox_Initial_Send_Date__c,
				    IF(
				        TopBoxWG__TopBox_Next_Renewal_Send_Date__c &gt; NOW(),
								    TopBoxWG__TopBox_Next_Renewal_Send_Date__c,
								    TopBoxWG__TopBox_Ongoing_Relationship_Send_Date__c 
				    )
				)
)</formula>
        <inlineHelpText>Date on which the next questionnaire is scheduled to be sent out to the selected contacts - for informational purposes. Once the upcoming Onboarding/Initial/Renewal Send Date has passed, the field automatically updates to reflect the next send date.</inlineHelpText>
        <label>TopBox - Next Questionnaire Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Next_Questionnaire_Type__c</fullName>
        <description>Next questionnaire type (Onboarding or Initial/Renewal Relationship) - for informational purposes.Two weeks after the Onboarding Send Date has passed, the field automatically updates to show that the next questionnaire type is Initial.</description>
        <formula>IF(
    OR(
								ISBLANK(TopBoxWG__TopBox_Onboarding_Send_Date__c),
								TODAY() &gt; DATEVALUE(TopBoxWG__TopBox_Onboarding_Send_Date__c)
				),
				IF(
								OR(
												ISBLANK(TopBoxWG__TopBox_Initial_Send_Date__c),  
								    TODAY() &gt; DATEVALUE(TopBoxWG__TopBox_Initial_Send_Date__c)
								),
								IF(
												OR(
												    ISBLANK(TopBoxWG__TopBox_Next_Renewal_Send_Date__c),  
								        TODAY() &gt; DATEVALUE(TopBoxWG__TopBox_Next_Renewal_Send_Date__c)
								    ),
												$CustomMetadata.TopBoxWG__TopBox_Questionaire_Type__mdt.TopBoxWG__Ongoing.TopBoxWG__Client_Label__c,
												$CustomMetadata.TopBoxWG__TopBox_Questionaire_Type__mdt.TopBoxWG__Renewal.TopBoxWG__Client_Label__c
								),
								$CustomMetadata.TopBoxWG__TopBox_Questionaire_Type__mdt.TopBoxWG__Initial.TopBoxWG__Client_Label__c 
				),
				$CustomMetadata.TopBoxWG__TopBox_Questionaire_Type__mdt.TopBoxWG__Onboarding.TopBoxWG__Client_Label__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Next questionnaire type (Onboarding or Initial/Renewal Relationship) - for informational purposes.Two weeks after the Onboarding Send Date has passed, the field automatically updates to show that the next questionnaire type is Initial.</inlineHelpText>
        <label>TopBox - Next Questionnaire Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Next_Renewal_Send_Date__c</fullName>
        <description>Date on which the Renewal Relationship questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True).</description>
        <inlineHelpText>Date on which the Renewal Relationship questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True).</inlineHelpText>
        <label>TopBox - Renewal Relationship Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Onboarding_Send_Date__c</fullName>
        <description>Date on which the Onboarding questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True). Field will be blank for accounts that have completed the onboarding process more than 2 months ago.</description>
        <inlineHelpText>Date on which the Onboarding assessment is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True). Field may be blank for accounts that have completed the onboarding process more than 1 month ago.</inlineHelpText>
        <label>TopBox - Onboarding Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Ongoing_Relationship_Send_Date__c</fullName>
        <description>Date on which the next Ongoing Relationship questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True). Once the most current Ongoing Relationship date has passed, the field automatically updates to reflect the next Ongoing Relationship send date.</description>
        <inlineHelpText>Date on which the next Ongoing questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True). Once the most current Ongoing date has passed, the field automatically updates to reflect the next send date.</inlineHelpText>
        <label>TopBox - Ongoing Relationship Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Response_Guidelines_Met_Percent__c</fullName>
        <label>TopBox - Response Guidelines Met (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Sentiment__c</fullName>
        <label>TopBox - Sentiment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Value_Net_Score__c</fullName>
        <label>TopBox - Value Net Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Adoption_Send_Date__c</fullName>
        <inlineHelpText>Date on which the Adoption assessment is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True).</inlineHelpText>
        <label>TopBox - Adoption Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_Imp_Partner__c</fullName>
        <inlineHelpText>Select the Onboarding implementation partner in order to show the correct set of questions as part of the Copado Engage onboarding assessment.</inlineHelpText>
        <label>TopBox - Onboarding Imp Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copado</fullName>
                </value>
                <value>
                    <fullName>NextView</fullName>
                </value>
                <value>
                    <fullName>Polsource</fullName>
                </value>
                <value>
                    <fullName>Thunder</fullName>
                </value>
                <value>
                    <fullName>Arcsona</fullName>
                </value>
                <value>
                    <fullName>Blue5green</fullName>
                </value>
                <value>
                    <fullName>Cloudfulcrum</fullName>
                </value>
                <value>
                    <fullName>Cloudqnect</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TopBox_Pre_Renewal_Send_Date__c</fullName>
        <inlineHelpText>Date on which the Pre-Renewal assessment is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True).</inlineHelpText>
        <label>TopBox - Pre-Renewal Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBox_Steady_State_Send_Date__c</fullName>
        <inlineHelpText>Date on which the Steady State assessment is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True). Once the current feedback wave has passed, the field automatically updates to reflect the next send date.</inlineHelpText>
        <label>TopBox - Steady State Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Account_Value_EUR__c</fullName>
        <label>Total Account Value EUR</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Weighted_Opportunity_Value__c</fullName>
        <description>This Field is Created For New Context Data Migration</description>
        <label>Total Weighted Opportunity Value</label>
        <summarizedField>Opportunity.NCS_Weighted_Opp_Value__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent__c</fullName>
        <formula>IF(
NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Parent.Name, IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Name, IF(NOT(ISBLANK(Parent.Parent.Parent.Name)), Parent.Parent.Parent.Name, IF(NOT(ISBLANK(Parent.Parent.Name)), Parent.Parent.Name, IF(NOT(ISBLANK(Parent.Name)),Parent.Name, Name))))
)</formula>
        <label>Ultimate Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage__c</fullName>
        <inlineHelpText>Updated from Last Overall Activity on the Production Org</inlineHelpText>
        <label>Usage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VAT_Number__c</fullName>
        <label>VAT Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Within_AOV_Band__c</fullName>
        <formula>IF(ISPICKVAL(   AOV_Band__c , &quot;&quot;), FALSE, TRUE)</formula>
        <inlineHelpText>Set as TRUE if Salesforce AOV field is not Blank</inlineHelpText>
        <label>Within AOV Band</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Working_Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to specify the working business hours of the Company. The Process Builder to create entitlements for the premier accounts will take the Working Business Hours from this field.</description>
        <inlineHelpText>Select the working business hours for this company. The value must be different than &quot;Default - 24/7&quot;.</inlineHelpText>
        <label>Working Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X6s_City__c</fullName>
        <label>6s City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Country__c</fullName>
        <label>6s Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Industry__c</fullName>
        <label>6s Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_NAICS_Code__c</fullName>
        <label>6s NAICS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_NAICS_Description__c</fullName>
        <label>6s NAICS Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Revenue_Range__c</fullName>
        <label>6s Revenue Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_SIC_Code__c</fullName>
        <label>6s SIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_SIC_Description__c</fullName>
        <label>6s SIC Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Segments__c</fullName>
        <label>6s Segments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_State__c</fullName>
        <label>6s State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Updated__c</fullName>
        <label>6s Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Y_tunnus__c</fullName>
        <description>This field is created for Qentinel data Migration</description>
        <label>Y-tunnus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountBuyingStage6sense_Copado__c</fullName>
        <label>6sense Account Buying Stage Copado</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountIntentScore6sense_Copado__c</fullName>
        <label>6sense Account Intent Score Copado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>accountProfileFit6sense_Copado__c</fullName>
        <label>6sense Account Profile Fit Copado</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountProfileScore6sense_Copado__c</fullName>
        <label>6sense Account Profile Score Copado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>accountReachScore6sense_Copado__c</fullName>
        <label>6sense Account Reach Score Copado</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountUpdateDate6sense_Copado__c</fullName>
        <label>6sense Account Update Date Copado</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Auto_Collection__c</fullName>
        <label>Auto Collection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>on</fullName>
                    <color>#57F17C</color>
                    <label>on</label>
                </value>
                <value>
                    <fullName>off</fullName>
                    <color>#FF0000</color>
                    <label>off</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__CB_Id__c</fullName>
        <label>Chargebee Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__CB_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chargebee Site</label>
        <referenceTo>chargebeeapps__CB_Sites__c</referenceTo>
        <relationshipLabel>CB Customers</relationshipLabel>
        <relationshipName>CB_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Email__c</fullName>
        <label>Chargebee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__First_Name__c</fullName>
        <label>Chargebee First Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
</CustomObject>